fix overflow scrollbar in IE

--- a/src/styles/markdown.less
+++ b/src/styles/markdown.less
@@ -43,7 +43,7 @@
 .markdown-body .MathJax_Display,
 .markdown-body .MathJax {
     max-width : 100%;
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
     outline   : none;
 }
@@ -52,7 +52,7 @@
 .markdown-body>*,
 .markdown-body>div>* {
     max-width : 100%;
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
 }
 
